--- a/index.html
+++ b/index.html
@@ -3,8 +3,12 @@
   <head>
     <meta charset="UTF-8">
     <link rel="icon" href="/favicon.ico">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vite App</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
+    <title>tldr InBrowser.App</title>
+    <meta name="description" content="tldr InBrowser.App is a web client for tldr-pages. Fully runs in your browser, no data is sent to the server. Fast and offline capable.">
+    <meta name="theme-color" content="#ffffff" media="(prefers-color-scheme: light)">
+    <meta name="theme-color" content="#101014" media="(prefers-color-scheme: dark)">
+    <style>@media (prefers-color-scheme:dark){body{background-color:#101014}}</style>
   </head>
   <body>
     <div id="app"></div>
