--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="mask-icon" href="/mask-icon.svg" color="#4d9182">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
     <title>tldr InBrowser.App</title>
-    <meta name="description" content="tldr InBrowser.App is a web client for tldr-pages. Fully runs in your browser, no data is sent to the server. Fast and offline capable.">
+    <meta name="description" content="tldr InBrowser.App is a offline-capable PWA for tldr-pages. Fully runs in your browser. Zero API latency.">
     <meta name="theme-color" content="#ffffff" media="(prefers-color-scheme: light)">
     <meta name="theme-color" content="#101014" media="(prefers-color-scheme: dark)">
     <style>@media (prefers-color-scheme:dark){body{background-color:#101014}}</style>
