declare opensearch.xml

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <meta name="theme-color" content="#ffffff" media="(prefers-color-scheme: light)">
     <meta name="theme-color" content="#101014" media="(prefers-color-scheme: dark)">
     <style>@media (prefers-color-scheme:dark){body{background-color:#101014}}</style>
+    <link rel="search" type="application/opensearchdescription+xml" title="tldr" href="/opensearch.xml" />
   </head>
   <body>
     <div id="app"></div>
